# holon

./: Cargo.toml  package-lock.json  package.json
dnas/holon/workdir/: dna.yaml
dnas/holon/zomes/coordinator/holon/: Cargo.toml
dnas/holon/zomes/coordinator/holon/src/: all_holons._rs  all_holons.rs  holon.rs  holon_dto.rs  lib.rs  typedescriptor.rs
dnas/holon/zomes/integrity/holon_integrity/: Cargo.toml
dnas/holon/zomes/integrity/holon_integrity/src/: holon.rs  lib.rs  semantic_version.rs  typedescriptor.rs
reference/: Cargo.toml  package.json
reference/dna/zomes/holon/: Cargo.toml
reference/dna/zomes/holon/integrity/: Cargo.toml
reference/dna/zomes/holon/integrity/src/: lib.rs  types.rs
reference/dna/zomes/holon/src/: holon.rs  lib.rs  types.rs
tests/src/holon/holon/: holon.test.ts  typedescriptor.test.ts
ui/src/: holochain-app.ts
ui/src/holon/holon/: all-holons.ts  create-holon.ts  create-property-map.ts  create-typedescriptor.ts  holon-detail.ts  holon.ts  property-map-detail.ts  property-map.ts  typedescriptor-detail.ts  typedescriptor.ts
workdir/: happ.yaml  web-happ.yaml
