[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]

[workspace.dependencies]
hdi = "0.1"
hdk = "0.0.157"
serde = "1"

[workspace.dependencies.holon]
path = "dnas/holon/zomes/coordinator/holon"

[workspace.dependencies.holon_integrity]
path = "dnas/holon/zomes/integrity/holon_integrity"
