[package]
authors = ["nphias@gmail.com"]
description = "Holon zome for any Holochain app"
documentation = ""
edition = "2021"
homepage = ""
license = "CAL"
name = "hc_zome_holon_integrity"
repository = "https://github.com/nphias/holon"
version = "0.0.1"

[lib]
name = "hc_zome_holon_integrity"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
serde = "1"
derive_more = "0"
chrono = { version = "=0.4.22", default-features = false, features = ["clock", "std", "oldtime", "serde"], optional = true }
hdi = "0.1.5"
holo_hash = { version = "=0.0.34", features = ["encoding"] }